--- a/src/index.css
+++ b/src/index.css
@@ -3,33 +3,36 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.card {
+  padding: 2em;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.read-the-docs {
+  color: #888;
 }
 
+.box:nth-child(3n + 1) {
+  grid-column: 1;
+}
+.box:nth-child(3n + 2) {
+  grid-column: 2;
+}
+.box:nth-child(3n + 3) {
+  grid-column: 3;
+}
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
